cleaning and documenting textual entailment

--- a/textual_entailment/0_fever_decode_wikipage_IDs_to_sentences.ipynb
+++ b/textual_entailment/0_fever_decode_wikipage_IDs_to_sentences.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "worth-archives",
    "metadata": {},
    "source": [
     "# Loading data"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e93013",
    "metadata": {},
    "source": [
     "This notebook serves to prepare the data from Fever to be used to train and test a textual entailment model.\n",
@@ -22,7 +20,6 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "radical-sunglasses",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +40,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "killing-copying",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "miniature-rouge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +116,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "enormous-luxembourg",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +168,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "unauthorized-learning",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +200,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "activated-session",
    "metadata": {},
    "source": [
     "# Getting supporting sentences"
@@ -215,7 +207,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dddf0d66",
    "metadata": {},
    "source": [
     "As can be seen in the cells below, the evidence in these datasets is not coded as written text sentences, but as a tuple (see https://fever.ai/2018/task.html).\n",
@@ -234,7 +225,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stopped-oasis",
    "metadata": {},
    "source": [
     "## Encoding issues\n",
@@ -246,7 +236,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "million-sphere",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "coupled-recipient",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +280,6 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "characteristic-antarctica",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +301,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "varying-intro",
    "metadata": {},
    "source": [
     "## Using a file index\n",
@@ -324,7 +310,6 @@
   },
   {
    "cell_type": "raw",
-   "id": "0979c66c",
    "metadata": {},
    "source": [
     "import pickle\n",
@@ -350,7 +335,6 @@
   },
   {
    "cell_type": "raw",
-   "id": "fc09e1b8",
    "metadata": {},
    "source": [
     "import ast\n",
@@ -391,7 +375,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "provincial-uniform",
    "metadata": {},
    "source": [
     "## Using an indexed database (much faster)\n",
@@ -401,7 +384,6 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "proprietary-player",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +419,6 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "normal-lingerie",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +505,6 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "interim-settlement",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +557,6 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "784d6752",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +590,6 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "sophisticated-secondary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +617,6 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "eight-honduras",
    "metadata": {
     "scrolled": false
    },
@@ -789,7 +766,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "upper-refrigerator",
    "metadata": {},
    "source": [
     "## Saving dataset for fine-tuning model"
@@ -798,7 +774,6 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "503efccc",
    "metadata": {
     "scrolled": false
    },
@@ -854,7 +829,6 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "collect-prevention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +840,6 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "adjacent-antique",
    "metadata": {
     "scrolled": true
    },
@@ -987,7 +960,6 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "d0fd573b",
    "metadata": {
     "scrolled": true
    },
@@ -1105,9 +1077,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CUDA 11.2 torch installation",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cuda"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1119,7 +1091,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
