--- a/textual_entailment/1_Using_BERT_on_FEVER_with_Trainer_3_Classes.ipynb
+++ b/textual_entailment/1_Using_BERT_on_FEVER_with_Trainer_3_Classes.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "181f1ddf",
    "metadata": {},
    "source": [
     "This notebook uses the data produced by `0_fever_decode_wikipage_IDs_to_sentences` to train and evaluate a BERT model for textual entailment.\n",
@@ -18,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hindu-cooper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "decreased-trace",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "professional-shareware",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +93,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "difficult-sacramento",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +116,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "unusual-samoa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +126,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "criminal-convergence",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +170,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "circular-sacrifice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +230,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "critical-brazil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +249,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "30c7e88a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +260,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4929d1c6",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +301,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "organized-phenomenon",
    "metadata": {
     "scrolled": true
    },
@@ -2462,7 +2450,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c5387f96",
    "metadata": {},
    "outputs": [
     {
@@ -2518,7 +2505,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "skilled-accent",
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2544,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "821c0f5b",
    "metadata": {},
    "outputs": [
     {
@@ -2612,7 +2597,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "immediate-developer",
    "metadata": {},
    "outputs": [
     {
@@ -2647,7 +2631,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "guided-recall",
    "metadata": {},
    "outputs": [
     {
@@ -2699,7 +2682,6 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "duplicate-layout",
    "metadata": {
     "scrolled": false
    },
@@ -2785,7 +2767,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concerned-donor",
    "metadata": {},
    "source": [
     "## Loading the model again for sanity checking"
@@ -2794,7 +2775,6 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "earlier-pearl",
    "metadata": {},
    "outputs": [
     {
@@ -2863,7 +2843,6 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "alone-minute",
    "metadata": {},
    "outputs": [
     {
@@ -2928,7 +2907,6 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "amino-ability",
    "metadata": {},
    "outputs": [
     {
@@ -2962,7 +2940,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "institutional-thanks",
    "metadata": {},
    "source": [
     "model.eval() is a kind of switch for some specific layers/parts of the model that behave differently during training and inference (evaluating) time. For example, Dropouts Layers, BatchNorm Layers etc. You need to turn off them during model evaluation, and .eval() will do it for you. In addition, the common practice for evaluating/validation is using torch.no_grad() in pair with model.eval() to turn off gradients computation:\n",
@@ -2990,7 +2967,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3004,7 +2981,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
