--- a/textual_entailment/2_Wikidecoded_trained_model_evaluation.ipynb
+++ b/textual_entailment/2_Wikidecoded_trained_model_evaluation.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5280409f",
    "metadata": {},
    "source": [
     "This notebook takes the models created by `1_Using_BERT_on_FEVER_with_Trainer_3_Classes` and applies them to the FEVER challenge dataset, in order to test their application in detecting evidence support. \n",
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "promising-resource",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +26,13 @@
     "import torch\n",
     "\n",
     "HOME = Path('/home/k20036346/')\n",
-    "KERNELGAT_DATA = HOME / 'Repos/KernelGAT/data'\n",
+    "KERNELGAT_DATA = HOME / 'Repos/KernelGAT/data' #This data can also be found in sentence_retrieval/data\n",
     "DEVICE = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
     "MAX_LEN = 400 # As defined when the tokenizer/model was fine-tuned"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "secure-apparatus",
    "metadata": {},
    "source": [
     "# Load data and models"
@@ -43,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c2bcee",
    "metadata": {},
    "source": [
     "We begin with the **DEV** dataset (this section can be changed to look at Train, Eval, and Test datasets too by just changing the loaded dataset path), as this we can score locally. The TEST dataset needs to be sent to CodaLab.\n",
@@ -57,7 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "median-leisure",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +213,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "stupid-renaissance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +229,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "palestinian-paraguay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +284,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convenient-butterfly",
    "metadata": {},
    "source": [
     "# Evaluate and record predictions"
@@ -300,7 +292,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "critical-scratch",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +526,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "indonesian-acquisition",
    "metadata": {
     "scrolled": true
    },
@@ -556,7 +546,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "traditional-viewer",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +578,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0606a23a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +587,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "creative-matrix",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +600,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "439c1def",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +609,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ed39f87a",
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +887,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "musical-change",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +941,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aa8b4dc0",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1131,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threatened-consensus",
    "metadata": {},
    "source": [
     "# Calculate classification metrics for DEV set"
@@ -1157,7 +1139,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "billion-seeker",
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1215,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collectible-vulnerability",
    "metadata": {},
    "source": [
     "# Calculating FEVER Score for DEV set"
@@ -1243,7 +1223,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "altered-ballet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1232,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "unavailable-france",
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1457,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "loved-geology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1507,7 +1484,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "amino-doctor",
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1530,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e62926d9",
    "metadata": {},
    "source": [
     "For the **DEV** set, we have:\n",
@@ -1617,7 +1592,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capable-qualification",
    "metadata": {},
    "source": [
     "# Calculating blind score for test set"
@@ -1625,7 +1599,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb51991c",
    "metadata": {},
    "source": [
     "First, run the cells above but for the TEST set, except for the evaluation cells, as they do not work without the ground-truth labels (The test set does not have any)."
@@ -1634,7 +1607,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "nuclear-terminal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1631,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c1a2b13",
    "metadata": {},
    "source": [
     "For the **TEST** set, we have:\n",
@@ -1685,7 +1656,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2364cf6a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1693,7 +1663,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1707,7 +1677,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
