--- a/textual_entailment/4_Using_BERT_on_FEVER_with_Trainer_3_Classes_DATASET_V2.ipynb
+++ b/textual_entailment/4_Using_BERT_on_FEVER_with_Trainer_3_Classes_DATASET_V2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "181f1ddf",
    "metadata": {},
    "source": [
     "This notebook uses the data produced by `3_fever_processing_for_textual_entailment` to train and evaluate a BERT model for textual entailment.\n",
@@ -19,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hindu-cooper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "decreased-trace",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "99dcdca5",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +88,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fad9ab6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +104,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "professional-shareware",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +131,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a81af236",
    "metadata": {},
    "source": [
     "**Note**: TAKING UNRELATED TEXT (LOW RETRIEVAL SCORE) TO THE CLAIMS AS 'NOT ENOUGH INFO' MIGHT ALSO BE A GOOD IDEA"
@@ -146,7 +139,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ee5c4592",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +170,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "difficult-sacramento",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +193,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "unusual-samoa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "criminal-convergence",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +246,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "circular-sacrifice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +306,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "critical-brazil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +325,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4929d1c6",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +368,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "organized-phenomenon",
    "metadata": {
     "scrolled": true
    },
@@ -1473,7 +1458,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c5387f96",
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1523,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "skilled-accent",
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1571,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "821c0f5b",
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1619,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "immediate-developer",
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1653,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "guided-recall",
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1704,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "duplicate-layout",
    "metadata": {
     "scrolled": false
    },
@@ -1810,7 +1789,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concerned-donor",
    "metadata": {},
    "source": [
     "## Loading the model again for sanity checking"
@@ -1819,7 +1797,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "earlier-pearl",
    "metadata": {},
    "outputs": [
     {
@@ -1888,7 +1865,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "alone-minute",
    "metadata": {},
    "outputs": [
     {
@@ -1953,7 +1929,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "amino-ability",
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +1962,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "institutional-thanks",
    "metadata": {},
    "source": [
     "model.eval() is a kind of switch for some specific layers/parts of the model that behave differently during training and inference (evaluating) time. For example, Dropouts Layers, BatchNorm Layers etc. You need to turn off them during model evaluation, and .eval() will do it for you. In addition, the common practice for evaluating/validation is using torch.no_grad() in pair with model.eval() to turn off gradients computation:\n",
@@ -2015,7 +1989,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2029,7 +2003,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
