--- a/textual_entailment/5_SentenceRetrievalBERT_trained_model_evaluation.ipynb
+++ b/textual_entailment/5_SentenceRetrievalBERT_trained_model_evaluation.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1ffbfd25",
    "metadata": {},
    "source": [
     "This notebook takes the models created by `4_Using_BERT_on_FEVER_with_Trainer_3_Classes_DATASET_V2` and applies them to the FEVER challenge dataset, in order to test their application in detecting evidence support. \n",
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "74aa5415",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +30,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5138807",
    "metadata": {},
    "source": [
     "# Load data and models"
@@ -40,7 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e0412af",
    "metadata": {},
    "source": [
     "We begin with the **DEV** dataset (this section can be changed to look at Train, Eval, and Test datasets too by just changing the loaded dataset path), as this we can score locally. The TEST dataset needs to be sent to CodaLab.\n",
@@ -54,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a5437f1e",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +210,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b1cd5d21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +226,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "984e9f07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +281,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdaffa8e",
    "metadata": {},
    "source": [
     "# Evaluate and record predictions"
@@ -297,7 +289,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2d53864d",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +523,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f50de5a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +555,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fb10e7f8",
    "metadata": {
     "scrolled": true
    },
@@ -586,7 +575,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d648aa86",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +607,6 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "bbf6b195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +616,6 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "233f2ff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +629,6 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "294a030a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +638,6 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "28112aa4",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +916,6 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "91b901e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +933,6 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "b0bb8b87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +963,6 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "21102cb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +993,6 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "9675067e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1035,6 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "723bc584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1092,6 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "975e28b4",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1344,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93db18fa",
    "metadata": {},
    "source": [
     "# Calculate classification metrics for DEV set"
@@ -1375,7 +1352,6 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "df0e8fd3",
    "metadata": {
     "scrolled": false
    },
@@ -1512,7 +1488,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d856dc1",
    "metadata": {},
    "source": [
     "# Calculating FEVER Score for DEV set"
@@ -1521,7 +1496,6 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "b81ca026",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1505,6 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "68ed942c",
    "metadata": {},
    "outputs": [
     {
@@ -1796,7 +1769,6 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "cd6d970b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,7 +1796,6 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "1ea89366",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1835,7 +1806,6 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "c1b93621",
    "metadata": {},
    "outputs": [
     {
@@ -1898,7 +1868,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e1274e0",
    "metadata": {},
    "source": [
     "## Results Comparison Table\n",
@@ -1923,7 +1892,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "521539c3",
    "metadata": {},
    "source": [
     "For the **DEV** set, we have:\n",
@@ -1985,7 +1953,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d76488",
    "metadata": {},
    "source": [
     "# Calculating blind score for test set"
@@ -1993,7 +1960,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4ff8eda",
    "metadata": {},
    "source": [
     "First, run the cells above but for the TEST set, except for the evaluation cells, as they do not work without the ground-truth labels (The test set does not have any)."
@@ -2002,7 +1968,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ddc83d3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2027,7 +1992,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69702c35",
    "metadata": {},
    "source": [
     "References from last year (best model by us, best model by others)\n",
@@ -2049,7 +2013,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bde8331",
    "metadata": {},
    "source": [
     "For the **TEST** set, we have:\n",
@@ -2075,7 +2038,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f22ae6e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2083,7 +2045,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2097,7 +2059,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
