--- a/textual_entailment/6_SentenceRetrievalBERT_trained_model_evaluation-MEASURE_MODELS_LAST_YEAR.ipynb
+++ b/textual_entailment/6_SentenceRetrievalBERT_trained_model_evaluation-MEASURE_MODELS_LAST_YEAR.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5280409f",
    "metadata": {},
    "source": [
     "This notebook takes the models stored last year at `./support_classification/models/` and applies them to the FEVER challenge dataset, in order to test their application in detecting evidence support, and to compare them to the models generated this year with the updated libraries.\n",
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "promising-resource",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +29,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secure-apparatus",
    "metadata": {},
    "source": [
     "# Load data and models"
@@ -39,7 +36,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c2bcee",
    "metadata": {},
    "source": [
     "We begin with the **DEV** dataset (this section can be changed to look at Train, Eval, and Test datasets too by just changing the loaded dataset path), as this we can score locally. The TEST dataset needs to be sent to CodaLab.\n",
@@ -53,7 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "median-leisure",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "stupid-renaissance",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +233,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "palestinian-paraguay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +288,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convenient-butterfly",
    "metadata": {},
    "source": [
     "# Evaluate and record predictions"
@@ -304,7 +296,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "critical-scratch",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +530,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "indonesian-acquisition",
    "metadata": {
     "scrolled": true
    },
@@ -560,7 +550,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "traditional-viewer",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +582,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0606a23a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +591,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "creative-matrix",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +604,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "439c1def",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +613,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ed39f87a",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +891,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "musical-change",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +945,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aa8b4dc0",
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1135,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threatened-consensus",
    "metadata": {},
    "source": [
     "# Calculate classification metrics for DEV set"
@@ -1161,7 +1143,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "billion-seeker",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1219,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collectible-vulnerability",
    "metadata": {},
    "source": [
     "# Calculating FEVER Score for DEV set"
@@ -1247,7 +1227,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "altered-ballet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1236,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "unavailable-france",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1461,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "loved-geology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1488,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "amino-doctor",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1534,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e62926d9",
    "metadata": {},
    "source": [
     "**STANDARD MODEL FROM 2021**\n",
@@ -1642,7 +1617,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capable-qualification",
    "metadata": {},
    "source": [
     "# Calculating blind score for test set"
@@ -1650,7 +1624,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb51991c",
    "metadata": {},
    "source": [
     "First, run the cells above but for the TEST set, except for the evaluation cells, as they do not work without the ground-truth labels (The test set does not have any)."
@@ -1659,7 +1632,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "nuclear-terminal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1656,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expected-deadline",
    "metadata": {},
    "source": [
     "References from last year (best model by us, best model by others)\n",
@@ -1706,7 +1677,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ae39f9",
    "metadata": {},
    "source": [
     "For the **TEST** set, we have:\n",
@@ -1732,7 +1702,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2364cf6a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1740,7 +1709,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1754,7 +1723,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
