--- a/textual_entailment/0.5_Wikipedia_fever_corpus_to_sql.ipynb
+++ b/textual_entailment/0.5_Wikipedia_fever_corpus_to_sql.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sorted-karaoke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +14,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "conditional-range",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +180,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "duplicate-anderson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +204,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
