--- a/textual_entailment/1_Using_BERT_on_FEVER_with_Trainer_2_Classes.ipynb
+++ b/textual_entailment/1_Using_BERT_on_FEVER_with_Trainer_2_Classes.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "335aaebd",
    "metadata": {},
    "source": [
     "This notebook uses the data produced by `0_fever_decode_wikipage_IDs_to_sentences` to train and evaluate a BERT model for textual entailment.\n",
@@ -18,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hindu-cooper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "decreased-trace",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "recovered-trail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "strategic-construction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "professional-shareware",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "difficult-sacramento",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +136,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "unusual-samoa",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "criminal-convergence",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +254,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "circular-sacrifice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "critical-brazil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +333,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "92bc59d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +344,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1b7acf1e",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +385,6 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "organized-phenomenon",
    "metadata": {
     "scrolled": false
    },
@@ -813,7 +799,6 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "immediate-developer",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +854,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "25021100",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +893,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "4d949d82",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +957,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -988,7 +971,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
