--- a/textual_entailment/3_fever_processing_for_textual_entailment.ipynb
+++ b/textual_entailment/3_fever_processing_for_textual_entailment.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56a29f23",
    "metadata": {},
    "source": [
     "This notebook represents an alternative to generating labelled data for textual entailment.\n",
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "scientific-evanescence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e2401a24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8dc3f879",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +101,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fb3c82c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +137,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cac07e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50924ea4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +174,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27bf843c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +190,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "supposed-suspect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +252,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61513c0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aae9b62f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +281,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ab4f05d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +294,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b1ed7747",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +327,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0a1dd560",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +359,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "swiss-baptist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +369,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81ce573d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -392,7 +376,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -406,7 +390,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
