--- a/textual_entailment/7_Using_BERT_on_FEVER_with_Trainer_3_Classes_DATASET_V2_HYPER.ipynb
+++ b/textual_entailment/7_Using_BERT_on_FEVER_with_Trainer_3_Classes_DATASET_V2_HYPER.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ac43827a",
    "metadata": {},
    "source": [
     "This notebook uses the data produced by `3_fever_processing_for_textual_entailment` to train and evaluate a BERT model for textual entailment. \n",
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hindu-cooper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "decreased-trace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "authentic-sydney",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "spanish-vitamin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +91,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "professional-shareware",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +127,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "portable-regression",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +137,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "missing-archives",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +160,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "unusual-samoa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +169,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "criminal-convergence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +198,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "circular-sacrifice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +254,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "critical-brazil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +273,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "124af88b",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +308,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "meaningful-michael",
    "metadata": {},
    "source": [
     "## Training"
@@ -330,7 +316,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "organized-phenomenon",
    "metadata": {
     "scrolled": true
    },
@@ -381,7 +366,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amended-order",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +374,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latest-wagon",
    "metadata": {},
    "source": [
     "BEST SO FAR (ALL SEEDS = 42):\n",
@@ -443,7 +426,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "immediate-developer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +435,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concerned-donor",
    "metadata": {},
    "source": [
     "## Loading the model again for sanity checking"
@@ -462,7 +443,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "earlier-pearl",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +453,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alone-minute",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +469,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spiritual-buyer",
    "metadata": {},
    "source": [
     "## Hyper-parameter fine-tuning"
@@ -499,7 +477,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "going-spending",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +523,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "eb15ee36",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +567,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outdoor-citizenship",
    "metadata": {
     "scrolled": false
    },
@@ -762,7 +737,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f1e21d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +745,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3138cd58",
    "metadata": {},
    "source": [
     "# Comparing runs"
@@ -780,7 +753,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "realistic-introduction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +784,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "chemical-cooking",
    "metadata": {
     "scrolled": true
    },
@@ -863,7 +834,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "eabdbd4a",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1002,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "3c0cbc9b",
    "metadata": {
     "scrolled": true
    },
@@ -1081,7 +1050,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "delayed-provider",
    "metadata": {
     "scrolled": false
    },
@@ -1123,7 +1091,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1137,7 +1105,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
